--- a/styles/style.css
+++ b/styles/style.css
@@ -46,7 +46,7 @@
 
 /* nav style */
 nav{
-    max-width: 1450px;
+    max-width: 1400px;
     margin: 25px auto;
 }
 .nav-container{
@@ -104,7 +104,7 @@ nav{
 
 /* banner section style */
 .banner{
-    max-width: 1460px;
+    max-width: 1400px;
     margin: 0 auto;
 }
 .banner-container{
@@ -148,7 +148,6 @@ nav{
 /* main style start */
 
 .standard{
-    height: 80vh;
     background-image: url(../assets/bg.png);
 }
 .standard-title{
@@ -157,7 +156,7 @@ nav{
     margin-top: 130px;
 }
 .standard-container{
-    max-width: 1460px;
+    max-width: 1400px;
     margin:50px auto;
     height: 60vh;
     display: grid;
@@ -207,7 +206,15 @@ nav{
     font-weight: 700;
     text-decoration: none;   
 }
-
+.arrow-image-container{
+    margin-top: 100px;
+    text-align: center;
+    cursor: pointer;
+}
+.arrow-image-container>img{
+    width: 80px;
+    height: 80px;
+}
 /* footer style start */
 
 /* responsive media query */
@@ -245,5 +252,18 @@ nav{
     .banner-content > img{
         width: 100%;
         height: 100%;
+    }
+
+    .standard{
+        margin: 20px;
+    }
+    .standard-title{
+        width: 100%;
+        margin-top: 90px;
+        text-align: center;
+    }
+    .standard-container{
+        grid-template-columns: repeat(1, 1fr);
+        margin-top: 5px;
     }
 }
