--- a/styles/style.css
+++ b/styles/style.css
@@ -315,17 +315,18 @@ nav{
 }
 
  #view-all{
-    /* font-size: 20px;
+    font-size: 20px;
     font-weight: 700;
     color: white;
     background-color: black;
     border-radius: 12px;
     padding: 12px 60px;
-    border: none; */
-    border: 2px solid red;
+    border: none;
     width: 200px;
     justify-content: center;
-    margin: 10px auto;
+    margin: 0px 870px ;
+    margin-bottom: 80px;
+    
 }
 
 /* footer style start */
