--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,16 @@
 }
 
 /* header style start */
-
+header > marquee{
+    color: rgb(99, 1, 86);
+    background-color: rgba(7, 135, 255, 0.11);
+}
+.marquee{
+    background-color: #01ACFD;
+    color: #FFFFFF;
+    margin-bottom: 0;
+    font-weight: 700;
+}
 /* nav style */
 nav{
     max-width: 1400px;
@@ -260,7 +269,7 @@ nav{
 }
 .card-content2>.card-content-description>.november2>button{
     color: #FFFFFF;
-    font-size: 18px;
+    font-size: 1rem;
     font-weight: 500;
     background-color: #95B226;
     border-radius: 45px;
@@ -285,16 +294,18 @@ nav{
 .card-content1 .november1{
     padding: 0px 45px 45px 45px;
 }
-.card-content1>.november1>button{
-    font-size: 18px;
+#this-is-btn{
+    font-size: 1rem;
     font-weight: 500;
     color: #FFFFFF;
     background-color: #3CD8E8;
     padding: 15px 20px;
     border-radius: 45px;
     border: none;
-    margin-bottom: 35px;
-    
+    margin-left: 30px;
+    margin-top: -100px;
+    margin-bottom: 40px;
+
 }
 .card-content1>.november1>h5{
     font-size: 1.5rem;
