--- a/styles/style.css
+++ b/styles/style.css
@@ -56,8 +56,6 @@ header > marquee{
 .marquee{
     background-color: #01ACFD;
     color: #FFFFFF;
-    margin-bottom: 0;
-    font-weight: 700;
 }
 /* nav style */
 nav{
@@ -113,6 +111,10 @@ nav{
     border: none;
     cursor: pointer;
 }
+.nav-btn:hover{
+    background-color: #05D4DF;
+    color: #5D58EF;
+}
 #assets{
     display: none;
 }
@@ -155,6 +157,11 @@ nav{
     padding: 10px 50px;
     border-radius: 12px;
     cursor: pointer;
+    border: none;
+}
+.banner-content > button:hover{
+    background-color: #01ACFD;
+    color: #F0AA00;
 }
 .banner-content > img{
     width: 600px;
@@ -275,6 +282,7 @@ nav{
     border-radius: 45px;
     border: none;
     padding: 10px 20px;
+    margin-top: -50px;
     margin-bottom: 22px;
 }
 .card-content2>.card-content-description>.november2{
@@ -341,6 +349,11 @@ nav{
     justify-items: center;
     align-items: center;
     margin-bottom: 50px;
+    cursor: pointer;
+}
+#view-all:hover{
+    background-color: #FFFFFF;
+    color: #F0AA00;
 }
 
 /* footer style start */
@@ -398,6 +411,7 @@ nav{
 }
 .footer-content3 img{
     margin-right: 20px;
+    cursor: pointer;
 
 }
 /* responsive media query */
